# debate-platform

./: .gitignore  API_REFERENCE.md  CONSOLIDATION_SUMMARY.md  DATA_MODEL_REFERENCE.md  DEVELOPER_GUIDE.md  DOCKER_SETUP.md  IMPROVEMENTS.md  ONBOARDING.md  README.md  README_IMPLEMENTATION_REFERENCE.md  REFACTORING_COMPLETE.md  ROUTE_REFACTORING.md  WEBSOCKET_COMMUNICATIONS.md  analysis.ipynb  balanced-debater.json  debate-platform-v2.debates.json  docker-compose.yml  firm-debater.json  init-mongo.js  main.py  package-lock.json  pyproject.toml
fyp-data/: VARIABLE_AUDIT.txt  analysis.ipynb  debatesv1_pilot.json  final_analysis.ipynb  human-human.json  open-debater.json  oral_presentation_20min_notes.txt  pyproject.toml
fyp-data/fyp-report/: abstract.tex  acknowledgements.tex  appendix_implementation_details.tex  bib.bib  conclusion_future_work.tex  experimental_methodology.tex  introduction.tex  litreview.tex  main.tex  results_analysis.tex  system_design_architecture.tex
fyp-data/outputs/: api_cost_log.json  arguments.csv  belief_history_p1.csv  debates.csv  reflections.csv  scores_cache.json
fyp-data/outputs/final_analysis/: analysis_participant_table.csv  condition_overview.csv  data_quality_floor_ceiling.csv  exploratory_compiled.csv  exploratory_detection_cues.csv  exploratory_models.csv  generate_result_figures.py  m3_m4_m4b_m4c_m5_vif.csv  mechanism_validation_pushback_confidence.csv  persuader_argument_validation_ratings.csv  persuader_argument_validation_summary.csv  player1_gap_closure_descriptives.csv  player1_gap_closure_tests.csv  power_analysis.csv  (+13 more)
(+72 files in other folders)
